:bug: fix: fix training table details fields not showing

--- a/src/app/trainings/Layout.module.scss
+++ b/src/app/trainings/Layout.module.scss
@@ -1,5 +1,5 @@
 .training {
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   gap: 24px;
