--- a/src/app/trainings/[id]/Training.module.scss
+++ b/src/app/trainings/[id]/Training.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  width: 100%;
 
   &__header {
     display: flex;
